export const TestTags = {
  PAGE_TITLE: 'page-title',
  TASK_LIST: 'task-list',
  REFRESHING: 'refreshing',
  ADD_TASK_BUTTON: 'add-task-button',
  EMPTY_TASKS: 'empty-tasks',
  LOADING_SPINNER: 'loading-spinner',
  MODAL_TITLE: 'modal-title',
  CREATE_TASK_TITLE_INPUT: 'create-task-title-input',
  EDIT_TASK_TITLE_INPUT: 'edit-task-title-input',
  FIELD_TITLE_LABEL: 'field-title-label',
  TASK_DESCRIPTION_INPUT: 'task-description-input',
  STATUS_DROPDOWN: 'status-dropdown',
  PRIORITY_DROPDOWN: 'priority-dropdown',
  CREATE_BUTTON: 'create-button',
  SAVE_BUTTON: 'save-button',
  CLOSE_BUTTON: 'close-button',
  TITLE_ERROR: 'title-error',
  SAVE_ERROR: 'save-error',
  LOAD_ERROR: 'load-error',
  ERROR_SNACKBAR: 'error-snackbar',
  DESCRIPTION: 'description',
  DETAIL_DESCRIPTION_LABEL: 'detail-description-label',
  DETAIL_VALIDATED_LABEL: 'detail-validated-label',
  CREATED_DATE: 'created-date',
  UPDATED_DATE: 'updated-date',
  VALID: 'valid',
  NOT_VALID: 'notValid',
  LANGUAGE_SWITCHER: 'language-switcher',
  LANGUAGE_OPTION_EN: 'language-option-en',
  LANGUAGE_OPTION_ES: 'language-option-es',

  taskTitle: (taskId: string) => `task-title-${taskId}`,
  infoButton: (taskId: string) => `info-button-${taskId}`,
  editButton: (taskId: string) => `edit-button-${taskId}`,
  deleteButton: (taskId: string) => `delete-button-${taskId}`,
  statusTag: (status: string) => `status-tag-${status}`,
  priorityTag: (priority: string) => `priority-tag-${priority}`,
  statusDropdownOption: (status: string) => `status-dropdown-option-${status}`,
  priorityDropdownOption: (priority: string) =>
    `priority-dropdown-option-${priority}`,
} as const;
