appId: ${MAESTRO_APP_ID}
env:
  UPDATED_TASK_TITLE: ${UPDATED_TASK_TITLE}
---
- tapOn:
    id: modal-title
- scrollUntilVisible:
    element:
      id: save-button
    direction: DOWN
    timeout: 10000
- tapOn:
    id: save-button
- extendedWaitUntil:
    notVisible:
      id: save-button
    timeout: 15000
- extendedWaitUntil:
    notVisible:
      id: refreshing
    timeout: 15000
- extendedWaitUntil:
    visible:
      text: ${UPDATED_TASK_TITLE}
    timeout: 15000
